attendance-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attendance
  namespace: otms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: attendance
  template:
    metadata:
      labels:
        app: attendance
    spec:
      containers:
        - name: attendance
          image: pritam0517/var-attendance:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: attendance-svc
  namespace: otms
spec:
  selector:
    app: attendance
  ports:
    - port: 8080        # Service port
      targetPort: 8080  # Container port
  type: ClusterIP       # Change to NodePort/LoadBalancer if external access is needed
