employee-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
  namespace: otms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
        - name: employee
          image: pritam0517/employee-api:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: employee-svc
  namespace: otms
spec:
  selector:
    app: employee
  ports:
    - port: 8080        # Service port
      targetPort: 8080  # Container port
  type: ClusterIP       # Change to NodePort/LoadBalancer if external access is needed
