frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: otms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: pritam0517/frontend:latest
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: otms
spec:
  selector:
    app: frontend
  ports:
    - port: 3000        # Service port
      targetPort: 3000  # Container port
  type: ClusterIP       # Change to NodePort/LoadBalancer if external access is needed8080
