state.yml
apiVersion: v1
kind: Service
metadata:
  name: scylla-svc
  namespace: otms
spec:
  clusterIP: None
  ports:
    - port: 9042
      targetPort: 9042
  selector:
    app: scylladb

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: scylladb
  namespace: otms
spec:
  serviceName: "scylla-svc"   # must match headless service name
  replicas: 1
  selector:
    matchLabels:
      app: scylladb
  template:
    metadata:
      labels:
        app: scylladb
    spec:
      containers:
        - name: scylladb
          image: scylladb/scylla:5.4
          ports:
            - containerPort: 9042   # CQL port
          volumeMounts:
            - name: scylla-data
              mountPath: /var/lib/scylla
  volumeClaimTemplates:
    - metadata:
        name: scylla-data     # must match volumeMounts name
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp2
        resources:
          requests:
            storage: 20Gi
